# sql-dojo

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  start.sh
backend/: database.py  main.py
backend/models/: schemas.py
backend/routers/: categories.py  databases.py  problems.py  progress.py
data_builder/: generate_data.py  manifest.py
data_builder/builders/: 01_continuous_login.py  02_window_lead_lag.py  03_window_rank.py  04_cumulative_agg.py  05_explode.py  06_joins.py  07_retention.py  08_expand_contract.py  09_merge_interval.py  10_hr_warehouse.py  11_date_processing.py  12_company_questions.py  13_json_parsing.py  14_fun_sql.py  __init__.py
docs/: 踏踏实实练SQL_全文.md
docs/superpowers/plans/: 2026-07-19-sql-practice-plan.md
docs/superpowers/specs/: 2026-07-19-sql-practice-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/pages/: CategoryListPage.tsx  ProblemListPage.tsx
